# py-odss

./: .gitignore  Makefile  README.md  pytest.ini  setup.py
dev/: config.json  requirements.txt  tasks.py
dev/tpls/requirements/: dev.txt
odss/: .odsshistory  __init__.py  __main__.py  bundle.py  consts.py  events.py  framework.py  registry.py
odss.cdi/: .pdm-python  README.md  pyproject.toml  setup.cfg  tox.ini
odss.cdi/odss/cdi/: bundle.py  component.py  contexts.py  decorators.py  service.py
odss.cdi/odss/cdi/handlers/: bind.py  provides.py  requires.py
odss.cdi/requirements/: dev.txt  tests.txt
odss.cdi/src/odss/cdi/: __init__.py  contexts.py  decorators.py
odss.cdi/tests/cdi/: components.py  conftest.py  interfaces.py  test_cdi_provides.py  test_cdi_validate.py  test_decorators.py
odss.cli/: .pdm-python  pyproject.toml  setup.cfg
odss.cli/odss/cli/: __main__.py  config.py
odss.cli/src/odss/cli/: __main__.py  config.py  helpers.py  reloader.py
odss.common/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
odss.common/odss/common/: __init__.py  base.py  configadmin.py  consts.py  core.py  events.py  shell.py  trackers.py
odss.common/requirements/: dev.txt  typing.txt
odss.common/src/odss/common/: __init__.py  ascii.py  configadmin.py  consts.py  core.py  shell.py  utils.py
odss.common/tests/common/: test_utils.py
odss.core/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
odss.core/odss/core/: __init__.py  bundle.py  consts.py  events.py  framework.py  loader.py  loop.py  registry.py  tests.py  utils.py
odss.core/odss/core/query/: __init__.py
odss.core/requirements/: dev.txt  typing.txt
odss.core/src/odss/core/: __init__.py  bundle.py  consts.py  events.py  framework.py  loader.py  loop.py  registry.py  tests.py
odss.core/src/odss/core/query/: parser.py
odss.core/tests/: conftest.py  utils.py
odss.core/tests/bundles/: text.py  translate.py
odss.core/tests/bundles/sub/: manifest.json
odss.core/tests/core/: test_events.py  test_framework.py  test_query.py  test_services.py  test_trackers.py  test_utils.py
odss.http.common/: pyproject.toml  setup.cfg  tox.ini
odss.http.common/odss/http/common/: __init__.py  abc.py  base.py  consts.py  decorators.py
odss.http.common/requirements/: dev.txt  typing.txt
odss.http.common/src/odss/http/common/: __init__.py  abc.py  base.py  consts.py  decorators.py  errors.py  response.py
odss.http.common/tests/: test_base.py  test_decorators.py
odss.http.core/: pyproject.toml  setup.cfg  tox.ini
odss.http.core/odss/http/core/: bundle.py  deps.py  encoders.py  engine.py  handlers.py  middewares.py  server.py  tests.py  trackers.py
odss.http.core/src/odss/http/core/: __init__.py  consts.py  deps.py  encoders.py  engine.py  handlers.py  middewares.py  server.py  tests.py  trackers.py
odss.http.core/src/odss/http/core/csrf/: __init__.py  abc.py  consts.py  crypto.py  middleware.py  policy.py  storage.py
odss.http.core/tests/: test_deps.py  test_encoders.py  test_server.py
odss.http.core/tests/csrf/: test_crypto.py
odss.services.configadmin/: MANIFEST.in  setup.cfg  tox.ini
odss.services.configadmin/odss/services/configadmin/: bundle.py  services.py  storages.py  trackers.py
odss.services.configadmin/tests/configadmin/: conftest.py  test_configuration.py  test_directory.py
odss.services.logger/: MANIFEST.in  setup.cfg  tox.ini
odss.services.logger/odss/services/logger/: __init__.py
odss.services.shell/: setup.cfg  tox.ini
odss.services.shell/odss/services/shell/: bundle.py  commands.py  shell.py  utils.py
odss.services.shell/requirements/: dev.txt
odss.services.shell/tests/shell/: conftest.py  test_shell.py  test_utils.py
odss.services.terminal/: MANIFEST.in  setup.cfg  tox.ini
odss.services.terminal/odss/services/terminal/: bundle.py
odss/_http/: __init__.py  abc.py  base.py  consts.py  decorators.py
odss/_http/aioserver/: context.py  manifest.json  server.py
odss/cdi/: component.py  consts.py  contexts.py  core.py  decorators.py  interfaces.py
odss/cdi/handlers/: bind.py  provides.py  requires.py
odss/cli/: __main__.py  config.py
odss/core/: __init__.py  bundle.py  consts.py  events.py  framework.py  loader.py  loop.py  registry.py  trackers.py  types.py  utils.py
odss/core/query/: __init__.py  nodes.py  parser.py
odss/examples/auth/: types.py
odss/examples/http/: basic.py  basic_mids.py
odss/http/: __init__.py  __main__.py  abc.py  base.py  basic.py  basic_mids.py  consts.py  decorators.py  manifest.json  server.py
odss/http/aioserver/: context.py  server.py
odss/query/: __init__.py  parser.py
odss/services/: __init__.py
odss/services/configadmin/: __init__.py  abc.py  activator.py  bundle.py  configuration.py  consts.py  interfaces.py  services.py  storages.py  trackers.py
odss/services/log/: __init__.py
odss/shell/: __init__.py  __main__.py  _stream.py  commands.py  console.py  consts.py  core.py  decorators.py  service.py  session.py  shell.py  stream.py  utils.py
odss/terminal/: main.py  manifest.json  session.py
requirements/: ci.txt
tests/: conftest.py  interfaces.py  test_events.py  test_framework.py  test_services.py  test_utils.py  utils.py
tests/bundles/: echo.py  simple.py  text.py  translate.py
tests/bundles/sub/: sub.py
tests/cdi/: components.py  conftest.py  interfaces.py  test_cdi_provides.py  test_cdi_validate.py  test_decorators.py
tests/core/: test_events.py  test_framework.py  test_query.py  test_services.py  test_trackers.py  test_utils.py
tests/services/configadmin/: conftest.py  test_configuration.py  test_directory.py
tests/shell/: conftest.py  test_shell.py  test_utils.py
