[metadata]
name = odss.cdi
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
include_package_data = True
install_requires =
    odss.common == 0.0.1
    odss.core == 0.0.1

[options.entry_points]
odss.bundle =
    odss.cdi = odss.cdi.bundle


[tool:pytest]
log_cli=true
log_level=WARN
asyncio_mode = auto
testpaths=tests