[project]
name = "odss.common"
version = "0.0.1"
description = ""
authors = [
    {name = "Piotr Smialkowski", email = "p.smialkowski@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "tox>=4.11.3",
    "pytest>=7.4.2",
]
lint = [
    "ruff>=0.0.292",
]
type = [
    "mypy>=1.6.0",
]
format = [
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/odss"]
source-includes = ["tests", "README.md", "tox.ini"]

[tool.pdm.scripts]
lint = "ruff src"
type = "mypy src"
format = { composite = ["isort src", "black src"] }
test = "pytest tests"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"./src/odss/common/__init__.py" = ["F401"]
