[metadata]
name = odss.core
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
include_package_data = True
install_requires =
    odss.common==0.0.1
    async-timeout==4.0.2
    uvloop==0.17.0


[options.entry_points]
pytest11 =
    odss.core = odss.core.tests

[tool:pytest]
log_cli=true
log_level=WARN
asyncio_mode = auto
testpaths=tests

addopts =
    # a bit verbosity
    -v

    # report all
    -ra

    # local vars in errors:
    --showlocals


[mypy]
python_version = 3.10
namespace_packages = True

[mypy-pytest_asyncio]
ignore_missing_imports = True