[metadata]
name = odss.core
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
include_package_data = True
install_requires =
    odss.common==0.0.1
    async-timeout==4.0.2
    uvloop==0.17.0


[options.entry_points]
pytest11 =
    odss.core = odss.core.tests

[tool:pytest]
log_cli=true
log_level=WARN
asyncio_mode = auto
testpaths=tests

addopts =
    # a bit verbosity
    -v

    # report all
    -ra

    # local vars in errors:
    --showlocals

[mypy]
python_version = 3.10
namespace_packages = True

[mypy-pytest_asyncio]
ignore_missing_imports = True

[flake8]
max-line-length = 100
per-file-ignores =
    # __init__ exports names
    odss/common/__init__.py: F401

[isort]
line_length=100
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
