[metadata]
name = odss.http.common
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
include_package_data = True
install_requires =
    ujson==5.5.0

[tool:pytest]
log_cli=true
log_level=WARN
asyncio_mode = auto
testpaths=tests

[mypy]
python_version = 3.10
namespace_packages = True

[mypy-pytest_asyncio]
ignore_missing_imports = True

[flake8]
max-line-length = 100
per-file-ignores =
    # __init__ exports names
    odss/http/common/__init__.py: F401

[isort]
line_length=100
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
