[metadata]
name = odss.http.core
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
include_package_data = True
install_requires =
    odss.common==0.0.1
    odss.http.common==0.0.1
    aiohttp==3.8.3
    pydantic==1.10.2

[options.entry_points]
odss.bundle =
    odss.http.aiohttp = odss.http.core.bundle
pytest11 =
    odss.http.core = odss.http.core.tests


[tool:pytest]
log_cli=true
log_level=WARN
asyncio_mode = auto
testpaths=tests
addopts =
    # a bit verbosity
    -v

    # report all
    -ra

    # local vars in errors:
    --showlocals

[mypy]
python_version = 3.10
namespace_packages = True

[mypy-pytest_asyncio]
ignore_missing_imports = True

[flake8]
max-line-length = 100

[isort]
line_length=100
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
