[metadata]
name = odss.services.shell
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
install_requires =
    odss.common == 0.0.1
    odss.core == 0.0.1

[options.entry_points]
odss.bundle =
    odss.services.shell = odss.services.shell.bundle
    odss.services.shell.basic = odss.services.shell.commands


[tool:pytest]
log_cli=true
log_level=WARN
asyncio_mode = auto
testpaths=tests
