[metadata]
name = odss.services.terminal
version = 0.0.1

[options]
python_requires = >= 3.10
packages = find_namespace:
install_requires =
    odss.common==0.0.1
    odss.core==0.0.1
    prompt_toolkit==3.0.29

[options.entry_points]
odss.bundle =
    odss.services.terminal = odss.services.terminal.bundle